--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "engines": {
+    "node": "0.10.41",
+    "npm": "1.4.29"
+  },
   "keywords": [],
   "author": "Ayaz Ali",
   "license": "ISC",
